- contact overlapping menu bug

--- a/frontend/static/frontend/css/mobile/article.css
+++ b/frontend/static/frontend/css/mobile/article.css
@@ -3,7 +3,7 @@
 /*********************************************************************************/
     #header:target ~ #main
     {
-        margin-top: 24em;
+        margin-top: 27em;
     }
 
 /*********************************************************************************/
@@ -11,17 +11,12 @@
 /*********************************************************************************/
     #main
     {
-        position: absolute;
-
-        top: 0;
-        right: 0;
-        left: 0;
-
-        margin-top: 12em;
+        position: relative;
+        margin: 15em 0 5em;
         padding: 0 4em;
 
         color: #E5E4E2;
-        background: #282828;
+        /*background: #282828;*/
 
         -moz-transition: all 0.6s ease-in-out;
         -webkit-transition: all 0.6s ease-in-out;
